UC#1 Order actions

--- a/src/force-app/main/default/classes/OrderSelector.cls
+++ b/src/force-app/main/default/classes/OrderSelector.cls
@@ -10,4 +10,10 @@ public with sharing class OrderSelector {
                 WHERE AccountId = :accountId];
     }
 
+    public static List<Order> selectOrdersById(Id orderId) {
+        return [SELECT Status
+                FROM Order
+                WHERE Id = :orderId];
+    }
+
 }
