--- a/src/force-app/main/default/classes/OrderSelector.cls
+++ b/src/force-app/main/default/classes/OrderSelector.cls
@@ -3,5 +3,7 @@ public with sharing class OrderSelector {
     public static List<Order> getOrdersbyAccountId(Id accountId){
         return [SELECT Id, OrderNumber, AccountId, EffectiveDate, Status, TotalAmount FROM Order WHERE AccountId = :accountId WITH SECURITY_ENFORCED];
     }
+
+    public static String updateOrder() {}
     
 }
