FirstUseCase: update preventStatusChangeByNotAnOwner

--- a/src/force-app/main/default/classes/CasesService.cls
+++ b/src/force-app/main/default/classes/CasesService.cls
@@ -11,10 +11,12 @@ public with sharing class CasesService {
 
     public void preventStatusChangeByNotAnOwner(List<Case> newRecords, Map<Id,Case> oldRecords) {
         Id uId = UserInfo.getUserId();
+        Map<Id, User> users = new Map<Id, User>([SELECT Id, IsActive FROM User]);
         for (Case newCase : newRecords) {
             if (
                 newCase.Status != oldRecords.get(newCase.Id).Status
                 && newCase.OwnerId != uId
+                && users.get(oldRecords.get(newCase.Id).OwnerId).IsActive
             ) {
                 newCase.addError(Constants.ERROR_PLEASE_CLAIM_CASE_BEFORE_CHANGING_ITS_STATUS);
             }
