Existing functionality update

--- a/src/force-app/main/default/classes/CasesService.cls
+++ b/src/force-app/main/default/classes/CasesService.cls
@@ -9,15 +9,26 @@ public with sharing class CasesService {
         return instance;
     }
 
-    public void preventStatusChangeByNotAnOwner(List<Case> newRecords, Map<Id,Case> oldRecords) {
+    public void preventStatusChangeByNotAnOwner(List<Case> newRecords, Map<Id, Case> oldRecords) {
+        Set<Id> inactiveUserIds = new Set<Id>();
+    
+        List<User> inactiveUsers = UserSelector.getInactiveUsers();
+        for (User user : inactiveUsers) {
+            inactiveUserIds.add(user.Id);
+        }
+    
         Id uId = UserInfo.getUserId();
         for (Case newCase : newRecords) {
-            if (
-                newCase.Status != oldRecords.get(newCase.Id).Status
-                && newCase.OwnerId != uId
-            ) {
+            Case oldCase = oldRecords.get(newCase.Id);
+    
+            if (oldCase.OwnerId != null && inactiveUserIds.contains(oldCase.OwnerId)) {
+                continue;
+            }
+    
+            if (newCase.Status != oldCase.Status && newCase.OwnerId != uId) {
                 newCase.addError(Constants.ERROR_PLEASE_CLAIM_CASE_BEFORE_CHANGING_ITS_STATUS);
             }
         }
     }
+    
 }
