--- a/src/force-app/main/default/classes/Constants.cls
+++ b/src/force-app/main/default/classes/Constants.cls
@@ -4,6 +4,8 @@ public with sharing class Constants {
     public static final String CASE_ORIGIN_WEB = 'Web';
     public static final String CASE_STATUS_NEW = 'New';
     public static final String CASE_STATUS_CLOSED = 'Closed';
+    public static final String ACCOUNT_STATUS_ACTIVE = 'Yes';
+    public static final String ACCOUNT_STATUS_INACTIVE = 'No';
     public static final String ERROR_PLEASE_CLAIM_CASE_BEFORE_CHANGING_ITS_STATUS = 'Please claim case before changing its status!';
     public static final String ERROR_UPDATE_INACTIVE_ACCOUNT = 'You cannot update an inactive account!';
 
