--- a/src/force-app/main/default/classes/CasesService.cls
+++ b/src/force-app/main/default/classes/CasesService.cls
@@ -11,12 +11,23 @@ public with sharing class CasesService {
 
     public void preventStatusChangeByNotAnOwner(List<Case> newRecords, Map<Id,Case> oldRecords) {
         Id uId = UserInfo.getUserId();
-        Map<Id, User> users = new Map<Id, User>([SELECT Id, IsActive FROM User]);
+
+        /** use oldOwnerIds make sence if Users in org a lot,
+         * otherwise delete from SOQL 'WHERE Id IN :oldOwnerIds'
+         * and code from 15 to 18
+         *  */ 
+        Set<Id> oldOwnerIds = new Set<Id>();
+        for (Case oldCase : oldRecords.values()) {
+            oldOwnerIds.add(oldCase.OwnerId);
+        }
+
+        Map<Id, User> users = new Map<Id, User>([SELECT Id, IsActive FROM User WHERE Id IN :oldOwnerIds]);
         for (Case newCase : newRecords) {
+            Case oldCase = oldRecords.get(newCase.Id);
             if (
-                newCase.Status != oldRecords.get(newCase.Id).Status
+                newCase.Status != oldCase.Status
                 && newCase.OwnerId != uId
-                && users.get(oldRecords.get(newCase.Id).OwnerId).IsActive
+                && users.get(oldCase.OwnerId).IsActive
             ) {
                 newCase.addError(Constants.ERROR_PLEASE_CLAIM_CASE_BEFORE_CHANGING_ITS_STATUS);
             }
