updated sharing settings of selector class

--- a/src/force-app/main/default/classes/UserSelector.cls
+++ b/src/force-app/main/default/classes/UserSelector.cls
@@ -1,8 +1,4 @@
-public inherited sharing class UserSelector {
-
-    public static User getUserById(Id userId) {
-        return [SELECT Id, isActive FROM User WHERE Id=:userId];
-    }
+public with sharing class UserSelector {
 
     public static Map<Id,User> getUsersById(Set<Id> userIds) {
         Map<Id,User> usersMap = new Map<Id,User>([SELECT Id, isActive FROM User WHERE Id IN:userIds WITH SECURITY_ENFORCED]);    
